syntax = "proto3";

package hello;

option java_multiple_files = true;
option java_package = "me.horlick.helloworld";

import "google/api/annotations.proto";

// A Greeter service simply responds to requests by echoing the name of the
// requester and a simple hello message.
service Greeter {
  // Builds and returns a greeting for the name given in HelloRequest.
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // Return a histogram of all names.
  rpc GetNames (GetNamesRequest) returns (NameHistogram) {
    option (google.api.http) = {
      get: "/v1/greeter/names"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greeting.
message HelloReply {
  string message = 1;
}

message GetNamesRequest {}

message HistogramEntry {
  string name = 1;
  int64 count = 2;
}

message NameHistogram {
  repeated HistogramEntry entry = 1;
}
